# greenhouse-gas-analysis-application

./: .gitignore  README.md  app.py  pyproject.toml  setup.cfg
model/data_models/: figure.py  station.py  user_options.py
model/dialog_handlers/: SMEAR_dialog_handler.py
model/factories/: factory.py  figure_factory.py  station_factory.py
model/options_parser/: options_parser.py
model/plotters/: SMEAR_plotter.py  STATFI_plotter.py  compare_plotter.py  plotter.py
model/tab_handlers/: SMEAR_tab_handler.py  STATFI_tab_handler.py  compare_tab_handler.py  tab_handler.py
model/utils/: consts.py  data_fetcher.py  file_manager.py  request_builder.py
options/: README.md
ui/: QtWaitingSpinner.py  SMEAR_summary_dialog.ui  Ui_SMEAR_summary_dialog.py  Ui_main_window.py  main_window.ui  mplwidget.py
