[tool.poetry]
name = "swd"
version = "0.1.0"
description = "Software Design course project by group SWD"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
PyQt6 = "^6.2.2"
requests = "^2.27.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"
pytest-mock = "^3.7.0"
flake8 = "^4.0.1"
mypy = "^0.931"
types-requests = "^2.27.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
